# TCC

LorawanGateway/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig
LorawanGateway/main/: CMakeLists.txt  main.c
LorawanTransmissor/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig
LorawanTransmissor/main/: CMakeLists.txt  main.c
